action section done

--- a/index.html
+++ b/index.html
@@ -25,12 +25,27 @@
         </nav>
         <section class="banner">
            <div class="both"> 
-            <h2 class="raleway">Cool Dark UI Template for <br>Webflow Agencies</h2>
+            <h2>Cool Dark UI Template for <br>Webflow Agencies</h2>
             <button class="button">Stay Focused</button>
            </div>
         </section>
+        <!-- action section -->
+        <section class="action">
+            <div class="action-div">
+                <div class="column-1">
+                    <h2>See It in Action</h2>
+                    <p>Explore the live preview and imagine your<br>brand in this bold new look</p>
+                    <button class="button">Launch Live Preview</button>
+                </div>
+                <div class="column-2">
+                    <img src="Assets/wc-mini.png" alt="">
+                </div>
+            </div>
+        </section>
       
     </main>
+
+
     
 </body>
 </html>
