--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
                 </div>
             </div>
         </section>
+        <!-- productive users section -->
+         <section class="productive-users">
+            <div class="productive">
+                <h3>Joined Thousands of Productive Users</h3>
+                <div class="child-div">                    
+                    <div class="options">
+                        <div class="box-1">
+                            <h1 class="title">50K</h1>
+                            <p class="subtitle">Active Users</p>
+                        </div>
+                        <div class="box-2">
+                            <h1 class="title">2M+</h1>
+                            <p class="subtitle">Focus Session</p>
+                        </div>
+                        <div class="box-3">
+                            <h1 class="title">95%</h1>
+                            <p class="subtitle">Satisfaction Rate</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
       
     </main>
 
