get in touch section structure done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </section>
         <!-- productive users section -->
-         <section class="productive-users">
+        <section class="productive-users">
             <div class="productive">
                 <h3>Joined Thousands of Productive Users</h3>
                 <div class="child-div">                    
@@ -63,7 +63,51 @@
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
+         <!-- user review section -->
+        <section class="user-review">
+            <div class="review">
+                <div class="title-1">
+                    <h2>What Our Users say</h2>
+                </div>
+                <div class="users-view">
+                    <div class="box-1">
+                        <div class="icons">
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                        </div>
+                        <h4>Loved by Designers</h4>
+                        <p>This template instantly leveled up our presence-Studio Vertex</p>
+                        <img src="Assets/avatar.png" alt=""> Reviewer name <br> Date
+                    </div>
+                </div>
+            </div>
+        </section>
+          <!-- Get intouch section -->
+        <section class="get-intouch">
+            <div class="parent-div">
+                <div class="child-div">
+                <div class="col-1">
+                    Let's Get in<br>Touch
+                </div>
+                <div class="col-2">
+                    <form action="">
+                        <label for="">Email</label><br>
+                        <input type="text" placeholder="example@email.com"><br>
+                        <label for="">Name</label><br>
+                        <input type="text" placeholder="Full Name"><br>
+                        <label for="">Message</label><br>
+                        <textarea name="" id="" rows="6" placeholder="write your message..."></textarea><br>
+                    </form>
+                    <button class="button">Get in Touch</button>
+                </div>
+                </div>
+
+            </div>
+        </section>
       
     </main>
 
