get in touch css done

--- a/index.html
+++ b/index.html
@@ -91,18 +91,19 @@
             <div class="parent-div">
                 <div class="child-div">
                 <div class="col-1">
-                    Let's Get in<br>Touch
+                    <h2>Let's Get in<br>Touch</h2>
                 </div>
                 <div class="col-2">
                     <form action="">
                         <label for="">Email</label><br>
-                        <input type="text" placeholder="example@email.com"><br>
+                        <input type="text" placeholder="   example@email.com"><br>
                         <label for="">Name</label><br>
-                        <input type="text" placeholder="Full Name"><br>
+                        <input type="text" placeholder="   Full Name"><br>
                         <label for="">Message</label><br>
-                        <textarea name="" id="" rows="6" placeholder="write your message..."></textarea><br>
+                        <textarea name="" id=""  placeholder="  write your message..."></textarea><br>
+                        <button class="button">Get in Touch</button>
                     </form>
-                    <button class="button">Get in Touch</button>
+                    
                 </div>
                 </div>
 
