--- a/index.html
+++ b/index.html
@@ -111,6 +111,24 @@
         </section>
       
     </main>
+    <!-- footer section  -->
+    <footer>
+        <div class="footer-div">
+
+            <div class="sub-div">
+                <div class="logo-div"><h1>LOGO</h1></div>
+                <div class="text-div"><P class="footer-text">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we bring your vision to life</P></div>
+                <div class="footer-text">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">How it works</a></li>
+                    <li><a href="">Service</a></li>
+                </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     
