finally horo sec bckgrd img fixed

--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <section class="hero-area">
+        <div class="container">
+            <nav class="nav-bar">
+                <h2 class="logo perple">LOGO</h2>
+                <button class="button">Sign Up</button>
+            </nav>
+            <section class="banner">
+                <div class="both">
+                    <h2>Cool Dark UI Templete for <br>Webflow Agencies</h2>
+                    <button class="button">Stay Focused</button>
+                </div>
+            </section>
+        </div>
+    </section>
+
     <main>      
-        <nav class="nav-bar">
-            <h2 class=" logo perple">LOGO</h2>
-            <button class="button">Sign Up</button>
-        </nav>
-        <section class="banner">
-           <div class="both"> 
-            <h2>Cool Dark UI Template for <br>Webflow Agencies</h2>
-            <button class="button">Stay Focused</button>
-           </div>
-        </section>
-        <!-- action section -->
         <section class="action">
             <div class="action-div">
                 <div class="column-1">
