user review section done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!-- hero section  -->
     <section class="hero-area">
         <div class="container">
             <nav class="nav-bar">
@@ -83,7 +84,51 @@
                         </div>
                         <h4>Loved by Designers</h4>
                         <p>This template instantly leveled up our presence-Studio Vertex</p>
-                        <img src="Assets/avatar.png" alt=""> Reviewer name <br> Date
+                        <div class="reviewer">
+                            <img src="Assets/avatar.png" alt="">  
+                            <div class="rev-info">
+                                <p>Reviewer name</p>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="box-1">
+                        <div class="icons">
+                            <div><img src="Assets/icon-star.png" alt=""></div> 
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                        </div>
+                        <h4>Loved by Designers</h4>
+                        <p>This template instantly leveled up our presence-Studio Vertex</p>
+                        
+                        <div class="reviewer">
+                            <img src="Assets/avatar.png" alt="">  
+                            <div class="rev-info">
+                                <p>Reviewer name</p>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box-1">
+                        <div class="icons">
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                            <div><img src="Assets/icon-star.png" alt=""></div>
+                        </div>
+                        <h4>Loved by Designers</h4>
+                        <p>This template instantly leveled up our presence-Studio Vertex</p>
+                        <div class="reviewer">
+                            <img src="Assets/avatar.png" alt="">  
+                            <div class="rev-info">
+                                <p>Reviewer name</p>
+                                <p>Date</p>
+                            </div>
+                        </div> 
                     </div>
                 </div>
             </div>
