--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                 <h3>Joined Thousands of Productive Users</h3>
                 <div class="child-div">                    
                     <div class="options">
-                        <div class="box-1">
+                        <div class="opt-box">
                             <h1 class="title">50K</h1>
                             <p class="subtitle">Active Users</p>
                         </div>
-                        <div class="box-2">
+                        <div class="opt-box">
                             <h1 class="title">2M+</h1>
                             <p class="subtitle">Focus Session</p>
                         </div>
-                        <div class="box-3">
+                        <div class="opt-box">
                             <h1 class="title">95%</h1>
                             <p class="subtitle">Satisfaction Rate</p>
                         </div>
