--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <section class="banner">
                 <div class="both">
-                    <h2>Cool Dark UI Templete for <br>Webflow Agencies</h2>
+                    <h2>Cool Dark UI Templete for <br>Webflow Agencies!</h2>
                     <button class="button">Stay Focused</button>
                 </div>
             </section>
